# watchdock

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md
src/: lib.rs  listen.rs  main.rs  rpc.rs  trigger.rs
tests/: Dockerfile  inside.sh  main.rs
