[package]
name = "watchdock"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.18", features = ["derive", "string", "env"] }
futures = "0.3.30"
rmp-serde = "1.3.0"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["io-std", "io-util", "fs", "rt-multi-thread", "signal", "sync", "time", "net", "macros", "process"] }
tokio-serde = { version = "0.9.0", features = ["messagepack"] }
tokio-util = { version = "0.7.12", features = ["codec"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
